--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*{
+  margin:0;
+  padding: 0;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #d2def6;
+  height: 15vh;
+  width:100%;
+  margin:auto 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header li{
+  list-style-type: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-header a{
+  color:rgb(21, 32, 54);
+  text-decoration: none;
+  margin:auto;
+}.App-header a:hover{
+  cursor: pointer;
+  color:rgb(35, 47, 72);;
+}.App-header li>a::after{
+  content:"";
+  display:block;
+  position:relative;
+  margin: auto;
+  width:70%;
+  margin-top: 3%;
+  height:1px;
+  background-color:rgb(35, 47, 72);
+  transform: scale(0);
+  transition:transform 0.2s ease-in-out;
+}.App-header li>a:hover::after{
+  transform: scale(1);
+}.App-header li{
+  text-align: center;
+  width:30%;
+}.App-header .translated{
+  font-style: italic;
+  font-size: 65%;
+  color: rgb(91, 112, 157);
+  margin:5px
 }
