--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,19 @@ code {
 }
 
 .custom-button {
-  display: inline-block;
-  padding: 10px 20px;
+  display: inline-flex;
+  align-items: center;
+  font-size: 2vh;
+  padding:5px;
   border: none;
   border-radius: 8px;
-  background-color: #007bff;
+  background-color: #6e82e4;
   color: #fff;
+  width:15%;
+  height:5vh;
+  margin:5px;
   text-align: center;
+  justify-content: center;
   text-decoration: none;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.2s;
@@ -31,7 +37,7 @@ code {
 }
 
 input {
-  padding: 10px;
+  padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 16px;
@@ -43,3 +49,4 @@ input:hover,
 input:focus {
   border-color: #007bff;
 }
+
